tests/parser/bad/missing_else.hel
// @name missing_else
// @phase parser
// @expect error

x = if (true) { 1 };
